--- a/.settings/console.ini
+++ b/.settings/console.ini
@@ -10,6 +10,9 @@ localization="null"
 window.mode="0"
 bus.volume.Master="0.0"
 multiplayer.name="user"
+ui.dynamic.color="(0.1, 0.1, 0.1, 1.0)"
+ui.console.zoom="1.0"
+ui.console.position="(0.0, 0.0)"
 
 [settings]
 
@@ -19,3 +22,6 @@ localization="null"
 window.mode="0"
 bus.volume.Master="0.0"
 multiplayer.name="user"
+ui.dynamic.color="(0.1, 0.1, 0.1, 1.0)"
+ui.console.zoom="1.40558851047824"
+ui.console.position="(528.101, 263.488)"
